Refactor pricing to frequency severity strategy
